fix: display none in collapse component

--- a/src/styles/objects/_molecule.collapse.scss
+++ b/src/styles/objects/_molecule.collapse.scss
@@ -2,7 +2,7 @@
   width: 100%;
   display: none;
 
-  &--open > &__content {
+  &--open {
     display: block;
   }
 }
